syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

import "console_models.proto";
import "credential_models.proto";
import "google/protobuf/timestamp.proto";

package io.iohk.atala.prism.protos;

// @exclude
// GENERAL

// Just an elliptic curve (EC) public key represented with big integers as strings.
//
// TODO: merge with the node PublicKey
message ConnectorPublicKey {
    string x = 1;
    string y = 2;
}
// Public key ECPoint (uncompressed form).
message EncodedPublicKey {
    bytes publicKey = 1; // The bytes representing the ECPoint encoded without compression.
}

// Information about an Issuer.
//
// TODO: Remove deprecated value
message IssuerInfo {
    string DID = 1;
    string name = 2;
    bytes logo = 3;
}

// Information about a Verifier.
//
// TODO: Remove deprecated value
message VerifierInfo {
    string DID = 1;
    string name = 2;
    bytes logo = 3;
}

// Information about a Holder.
// @exclude TODO: Remove deprecated value
message HolderInfo {
    string DID = 1;
    string name = 2;
}

// Type representing generic participant in the system, alternative of IssuerInfo, HolderInfo, or VerifierInfo.
message ParticipantInfo {
    // @exclude
    // TODO: Remove roles, they no longer exist.
    oneof participant {
        IssuerInfo issuer = 1;
        HolderInfo holder = 2;
        VerifierInfo verifier = 3;
    }
}


// @exclude
// CONNECTIONS

// A connection between two parties authorizing the use of the connector as a messaging channel.
message Connection {
    // The connection token used to initialize the connection with the wallet.
    string connectionToken = 1;

    // The connector-generated connection ID.
    string connectionId = 2;
}

// Information about the connection; both sides see the same connectionId and creation time, but each sees different participantInfo.
message ConnectionInfo {
    string connectionId = 1; // The connection identifier.
    int64 created_deprecated = 2 [deprecated = true]; // Moment of instantiation in milliseconds since the Unix Epoch.
    ParticipantInfo participantInfo = 3; // [Will be deprecated] information about the participant at the other end.
    string token = 4; // The token used to generate the connection.
    string participantName = 5; // Same value as the one contained in `participantInfo`.
    bytes participantLogo = 6; // Same value as the one contained in `participantInfo`.
    string participantDID = 7; // Same value as the one contained in `participantInfo`.
    google.protobuf.Timestamp created = 8; // Timestamp of instantiation.
}

// Communication key for connection participant.
//
// TODO: Remove this when unpublished DIDs are integrated on the apps.
message ConnectionKey {
  // Key identifier; it can be empty if the participant uses only one key.
  string keyId = 1;

  // The actual public key.
  EncodedPublicKey key = 2;
}


// @exclude
// MESSAGES

// Message received via a connection.
message ReceivedMessage {
    string id = 1; // The unique ID for this message.
    int64 received_deprecated = 2 [deprecated = true]; // Time when the connector received the message, expressed in milliseconds since the Unix Epoch.
    string connectionId = 3; // Connection where the message has been received.
    bytes message = 4; // Raw message, which needs to be parsed to get something meaningful. AtalaMessage is the common choice.
    google.protobuf.Timestamp received = 5; // The timestamp when the connector received the message.
}

message ContactConnection {
    string connectionId = 1;
    string connectionToken = 2;
    ContactConnectionStatus connectionStatus = 3;
}

message MessageToSendByConnectionToken {
    string connectionToken = 1; // The connection token used to accept the connection.
    AtalaMessage message = 2; // Raw message.
}
